--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/index.css">
     <title>first practice website</title>
 </head>
-<body>
-    
+<body class="open-sans-practicess">
+    <header>
+        <nav class="nav-var">
+            <h3 class="nav-tittle"> Ma<span class="nav-ar">r</span>y</h3>
+            <ul>
+                <li><a class="dark-02" href="#">Portfolio</a></li>
+                <li><a class="dark-02" href="#">Blog</a></li>
+                <li><a href="#"> <button  class="btn-primary"> Hire Me</button></a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
