--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link rel="stylesheet" href="style/index.css">
     <title>first practice website</title>
 </head>
-<body class="open-sans-practicess">
-    <header>
-        <nav class="nav-var">
-            <h3 class="nav-tittle"> Ma<span class="nav-ar">r</span>y</h3>
-            <ul>
-                <li><a class="dark-02" href="#">Portfolio</a></li>
-                <li><a class="dark-02" href="#">Blog</a></li>
-                <li><a href="#"> <button  class="btn-primary"> Hire Me</button></a></li>
-            </ul>
-        </nav>
-    </header>
+<header class="bg-one">
+    <nav class="header-menu main-div">
+        <h1> Ma<span>r</span>y</h1>
+        <ul>
+            <li><a class="dark01" href="#">Portfolio</a></li>
+            <li><a class="dark01" href="#">Blog</a></li>
+            <li><a href="#"><button class="btn-primary"> Hire Me</button></a></li>
+        </ul>
+    </nav>
+</header>
+
+
+
 </body>
 </html>
