services section design complete

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <script src="https://kit.fontawesome.com/0e05a13725.js" crossorigin="anonymous"></script>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/index.css">
     <title>first practice website</title>
 </head>
+
+<!-- this are header codes -->
 <header class="bg-one">
     <nav class="header-menu main-div">
         <h1> Ma<span>r</span>y</h1>
@@ -19,6 +22,102 @@
         </ul>
     </nav>
 </header>
+
+<!-- header codes ends here  -->
+
+<!-- hero section codes start  -->
+
+<div class="hero-section bg-one">
+    <div class="cirle-bg">
+        <div class="intro main-div">
+            <div class="dev-intro">
+                <h3 class="dark01">Hi, I am</h3>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div class="hero-btn">
+                    <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                    <button class="btn-primary-outline"><i class="fa-solid fa-phone"></i> Contact</button>
+                </div>
+            </div>
+                
+                <img class="img-hero" src="images/hardy.png" alt="hardy ">
+            </div>
+    </div>
+</div>
+
+<!-- hero section ends here -->
+
+<!-- about section start here -->
+
+
+<div class="about-us main-div bg-one">
+    <div class="about-me ">
+        <div class="about-box">
+            <h2>About Me</h2>
+            <p> I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <div class="list-about">
+                <div class="list-iteam">
+                    <p>Name:</p>
+                    <h3>Mary Hardy</h3>
+                </div><div class="list-iteam">
+                    <p>Email::</p>
+                    <h3>info@gmail.com</h3>
+                </div><div class="list-iteam">
+                    <p>Date of birth:</p>
+                    <h3>11 November 1987</h3>
+                </div><div class="list-iteam">
+                    <p>From:</p>
+                    <h3>Los Angeles, USA</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- about us code ends here  -->
+
+<div class="wh-do main-div">
+    <h1>
+        what i do
+    </h1>
+    <p>
+        I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+    </p>
+</div>
+
+<div class="services-section main-div">
+    <div class="services">
+        <img src="images//icons/js.png" alt="">
+        <h1>Vanilla JavaScript</h1>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+    </div>
+    <div class="services">
+        <img src="/images//icons/react.png" alt="">
+        <h1>React</h1>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+    </div>
+    <div class="services">
+        <img src="/images//icons/nodejs.png" alt="">
+        <h1>Node.js</h1>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+    </div>
+    <div class="services">
+        <img src="/images//icons/mongo.png" alt="">
+        <h1>MongoDB</h1>
+        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
