--- a/index.html
+++ b/index.html
@@ -109,11 +109,70 @@
 </div>
 
 
+<!-- services section end here  -->
+
+
+<div class="summary main-div">
+    <h1> A summary of my Resume</h1>
+</div>
 
 
 
+<div class="edu-section main-div">
+    <div class="edu-one">
+        <h1>My Education</h1>
+        <div class="deg-edu">
+            <h1>Master in Computer Engineering</h1>
+            <h3>Harvard University / 2015 - 2017</h3>
+            <p>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="deg-edu">
+            <h1>Master in Computer Engineering</h1>
+            <h3>Harvard University / 2015 - 2017</h3>
+            <p>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="deg-edu">
+            <h1>Master in Computer Engineering</h1>
+            <h3>Harvard University / 2015 - 2017</h3>
+            <p>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+    <div class="edu-two">
+        <h1>My Experience </h1>
+        <div class="deg-edu">
+            <h1>Sr. Font End Developer</h1>
+            <h3>Apple Inc / 2020 - Current</h3>
+            <p>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="deg-edu">
+            <h1>Jr. Font End Developer</h1>
+            <h3>Dribbble Inc / 2018 - 2022</h3>
+            <p>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <hr>
+        <div class="deg-edu">
+            <h1>HTML Developer</h1>
+            <h3>Adobe Inc / 2017 - 2018</h3>
+            <p>List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+        </div>
+    </div>
+    
+</div>
 
+<div class="res-btn main-div">
+    <button class="btn-primary"> <i class="fa-solid fa-download "></i> Download CV</button>
+</div>
 
+<!-- resuem section ends here  -->
 
 
 
